--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -229,6 +229,8 @@
     width: 100%; /* Ensure it spans full width */
     padding-bottom: 2rem; /* Add extra padding at the bottom of the scrollable area */
     /* Hide scrollbar if content doesn't overflow much, but allow scrolling */
+    display: flex;
+    flex-direction: columm;
     scrollbar-width: thin; /* Firefox */
     scrollbar-color: #ccc #036; /* Firefox */
   }
