--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -134,6 +134,7 @@
     width: 100vw;
     height: 100dvh;
     background-color: #003366;
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding-left: 0;
