--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -109,9 +109,10 @@
 .nav-links li a.active {
   border-bottom: 2px solid #fff;
 }
-.nav-close-container {
-  display: none;
-}
+.nav-links .nav-close-container,
+  .nav-links .nav-links-scroll-wrapper {
+    display: none;
+  }
 
 /* ─────────── Mobile Menu ─────────── */
 @media (max-width: 900px) {
