--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,10 @@
   font-family: 'Inter', sans-serif;
 }
 
+ol, ul {
+  list-style: none;
+}
+
 html, body {
   height: 100%;
   overflow-x: hidden;
